temp fix for overflow

--- a/app/components/AngledRectangle/AngledRectangle.module.css
+++ b/app/components/AngledRectangle/AngledRectangle.module.css
@@ -4,13 +4,13 @@
 	display: flex;
 	/* align-items: center; */
 	justify-content: center;
-	overflow: hidden;
+	/* overflow: hidden; */
 	margin: -5rem 0;
 	padding: 5rem 0;
 }
 
 .angled_rectangle h1 {
-	font-size: 96px;
+	font-size: 80px;
 	font-weight: 900;
 	/* text-align: left; */
 	/* margin-bottom: 5rem; */
@@ -55,7 +55,7 @@
 	/* max-width: 70%; */
 	/* z-index: 1; */
 	/* position: relative; */
-	padding: 10rem 10rem;
+	padding: 10rem 5%;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
